# voxt

./: .gitignore  CMakeLists.txt  README.md  voxt.desktop
src/: CMakeLists.txt  main.cpp  resources.qrc
src/contents/ui/: main.qml
src/contents/ui/components/: Database.qml  WordView.qml
src/contents/ui/pages/: CardWordsViewPage.qml  StudyPage.qml  WordViewPage.qml
